# scrabble-bot

./: .gitignore  DawgGen.hs  GameData.hs  LICENSE  Main.hs  Paths_scrabble_bot.hs  PlayGen.hs  ScrabbleBot.hs  scrabble-bot.cabal  trie.hsdat  twl06.dawg  twl06.gaddag
TrieGen/: .gitignore  TrieGen.hi  TrieGen.py
python-dawg-gen/: Convert.hs  DawgGen.py  README.md
