
name:                scrabble-bot
version:             0.1.0.0
synopsis:            Scrabble play generation.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andr치s Kov치cs
maintainer:          Andr치s Kov치cs <puttamalac@gmail.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.8
stability:           experimental
data-files:          dictionaries/*.txt
extra-source-files:  python-dawg-gen/Serialize.hs, python-dawg-gen/DawgGen.py, python-dawg-gen/README.md


executable scrabble-bot
    main-is:              PlayGen.hs        
    build-depends:        base ==4.6.*, array ==0.4.*, binary ==0.7.*, split ==0.2.*, parallel ==3.2.*, containers ==0.5.*, mtl ==2.1.*

executable dawg-gen
    main-is:        DawgGen.hs
    build-depends:  base ==4.6.*, containers ==0.5.*, binary ==0.7.*, array ==0.4.*, directory ==1.2.*, mtl ==2.1.*



